--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             How We Do It
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Step by Step Process</a>
+            <a class="dropdown-item" href="#">Step by step process</a>
             <a class="dropdown-item" href="#">Cleanup Technology</a>
             <a class="dropdown-item" href="#">Cleanup Sites</a>
             <a class="dropdown-item" href="#">Meet our Teams!</a>
@@ -143,6 +143,10 @@
   <!-- Footer -->
   <footer class="footer bg-light">
     <div class="container">
+      <div class="row">
+        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+          </div>
+      </div>
     </div>
   </footer>
 
