steps filled in, add'l images added

--- a/steps.html
+++ b/steps.html
@@ -127,15 +127,15 @@ data-enhancer="objectFit"/>
         aria-hidden="true">
         <div class="explanation-steps-block__tabpanel-content">
             <figure class="explanation-steps-block__tabpanel-media">
-                                                <video
-                    src="https://assets.theoceancleanup.com/app/uploads/2019/10/interceptor-barrier.mp4"
+            <img
+                    src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-3.jpg"
                     role="presentation"
                     preload="auto"
                     loop muted playsinline webkit-playsinline>
-                </video>
+            </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
-                <p>River waste flowing with the current is guided by the barrier towards the opening of the Interceptor. Thanks to the Interceptor’s catamaran design, the water flow path is optimized to pass through the system, carrying the plastic onto the conveyor belt.</p>
+                <p>A picture is taken of the entire cleanup crew before they leave the main facility</p>
 
             </div>
         </div>
@@ -160,16 +160,14 @@ data-enhancer="objectFit"/>
         aria-hidden="true">
         <div class="explanation-steps-block__tabpanel-content">
             <figure class="explanation-steps-block__tabpanel-media">
-                                                <video
-                    src="https://assets.theoceancleanup.com/app/uploads/2019/10/interceptor-conveyor-belt-270p.mp4"
+      <img
+    src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-3.jpg"
                     role="presentation"
-                    preload="auto"
-                    loop muted playsinline webkit-playsinline>
-                </video>
+                    preload="auto">
+            </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
-                <p>The current moves the debris onto a conveyor belt, which continuously extracts the debris from the water and delivers the waste to the shuttle. </p>
-
+                <p>The impact zone is carefully photographed before our captains and crews start recovering any trash</p>
             </div>
         </div>
     </div>
@@ -193,16 +191,15 @@ data-enhancer="objectFit"/>
         aria-hidden="true">
         <div class="explanation-steps-block__tabpanel-content">
             <figure class="explanation-steps-block__tabpanel-media">
-                                                <video
-                    src="https://assets.theoceancleanup.com/app/uploads/2019/10/interceptor-shuttle-conveyor-270p.mp4"
+                                                <img
+                    src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-4.jpg"
                     role="presentation"
                     preload="auto"
                     loop muted playsinline webkit-playsinline>
-                </video>
+            </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
-                <p>A shuttle automatically distributes the debris across six dumpsters. Using sensor data, the containers are filled equally until they reach full capacity. </p>
-
+                <p> Photos are taken throughout the cleanup to document the crews’ progress</p>
             </div>
         </div>
     </div>
@@ -215,7 +212,7 @@ data-enhancer="objectFit"/>
             href="#explanation-tabpanel-62081-4"
             aria-controls="explanation-tabpanel-62081-4 explanation-image-62081-4"
             aria-selected="false">
-            <h4><span>4</span>Post cleanup zone photography</h4>
+            <h4><span>4</span>Post impact zone photography</h4>
         </a>
     </header>
     <div
@@ -226,15 +223,14 @@ data-enhancer="objectFit"/>
         aria-hidden="true">
         <div class="explanation-steps-block__tabpanel-content">
             <figure class="explanation-steps-block__tabpanel-media">
-                                                <video
-                    src="https://assets.theoceancleanup.com/app/uploads/2019/10/interceptor-bins-270p.mp4"
+                                                <img
+                    src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-5.jpg"
                     role="presentation"
-                    preload="auto"
-                    loop muted playsinline webkit-playsinline>
-                </video>
+                    preload="auto">
+            </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
-                <p>The Interceptor can store up to 50m³ of trash before needing to be emptied. This means it’s capable of operating even in the most polluted rivers all over the world.</p>
+                <p>The impact zone is photographed again once our crews are finished cleaning</p>
 
             </div>
         </div>
@@ -260,16 +256,14 @@ data-enhancer="objectFit"/>
         aria-hidden="true">
         <div class="explanation-steps-block__tabpanel-content">
             <figure class="explanation-steps-block__tabpanel-media">
-                                                <video
-                    src="https://assets.theoceancleanup.com/app/uploads/2019/10/interceptor-bins-270p.mp4"
+                                                <img
+                    src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-6.jpg?4"
                     role="presentation"
-                    preload="auto"
-                    loop muted playsinline webkit-playsinline>
-                </video>
+                    preload="auto">
+            </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
-                <p>The Interceptor can store up to 50m³ of trash before needing to be emptied. This means it’s capable of operating even in the most polluted rivers all over the world.</p>
-
+                <p>All of the trash collected is photographed alongside the crew that collected it.</p>
             </div>
         </div>
     </div>
@@ -295,15 +289,13 @@ data-enhancer="objectFit"/>
         <div class="explanation-steps-block__tabpanel-content">
             <figure class="explanation-steps-block__tabpanel-media">
                                                                                     <img
-                    src="https://assets.theoceancleanup.com/app/uploads/2019/10/1908-MALAYSIA-10770521-960x540.jpg"
-                    srcset="https://assets.theoceancleanup.com/app/uploads/2019/10/1908-MALAYSIA-10770521-960x540.jpg 960w, https://assets.theoceancleanup.com/app/uploads/2019/10/1908-MALAYSIA-10770521-320x180.jpg 320w, https://assets.theoceancleanup.com/app/uploads/2019/10/1908-MALAYSIA-10770521-640x360.jpg 640w, https://assets.theoceancleanup.com/app/uploads/2019/10/1908-MALAYSIA-10770521-1280x720.jpg 1280w, https://assets.theoceancleanup.com/app/uploads/2019/10/1908-MALAYSIA-10770521-1920x1080.jpg 1920w"
+                    src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-7.jpg?"
                     sizes="(min-width: 940px) 80vw, 100vw"
                     width="320"
                     height="180">
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
-                <p>When the interceptor is almost full, it automatically sends a text message to the local operators to come and collect the waste. Operators then remove the barge, bring it to the side of the river, empty the dumpsters, send off the debris to local waste management facilities, and return the barge back into the Interceptor™.</p>
-
+<p>The entire weighing process is photographed. The scale and a member of the cleanup crew must be visible in every photo. Once weighed, the trash is loaded onto the 4ocean vehicle and photographed again before it’s transported back to our main facility.</p>
             </div>
         </div>
     </div>
@@ -327,16 +319,13 @@ data-enhancer="objectFit"/>
         aria-hidden="true">
         <div class="explanation-steps-block__tabpanel-content">
             <figure class="explanation-steps-block__tabpanel-media">
-                                                <video
-                    src="https://assets.theoceancleanup.com/app/uploads/2019/10/interceptor-bins-270p.mp4"
-                    role="presentation"
-                    preload="auto"
-                    loop muted playsinline webkit-playsinline>
-                </video>
+                                                <img
+                    src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-8.jpg"
+                    role="presentation">
+            </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
-                <p>The Interceptor can store up to 50m³ of trash before needing to be emptied. This means it’s capable of operating even in the most polluted rivers all over the world.</p>
-
+<p>A designated crew member completes a TrashTracker™ Documentation Sheet, which includes the date, time spent cleaning, number of captains and crew involved, weight of each collection sack, amount of trash loaded onto each vessel, and total weight of the trash collected. Then a recorder and administrator double the recorded information for accuracy and dually authorize the TrashTracker™ Documentation Sheet with their signatures.</p>
             </div>
         </div>
     </div>
@@ -361,15 +350,13 @@ data-enhancer="objectFit"/>
         aria-hidden="true">
         <div class="explanation-steps-block__tabpanel-content">
             <figure class="explanation-steps-block__tabpanel-media">
-                                                <video
-                    src="https://assets.theoceancleanup.com/app/uploads/2019/10/interceptor-bins-270p.mp4"
-                    role="presentation"
-                    preload="auto"
-                    loop muted playsinline webkit-playsinline>
-                </video>
+                                                <img
+                    src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-1.jpg"
+                    role="presentation">
+            </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
-                <p>The Interceptor can store up to 50m³ of trash before needing to be emptied. This means it’s capable of operating even in the most polluted rivers all over the world.</p>
+                <p>All of the data from the TrashTracker™ Documentation Sheet is uploaded into our digital TrashTracker™ by the end of each business day. The TrashTracker™ is audited and verified quarterly by the Better Business Bureau.</p>
 
             </div>
         </div>
