remove extra pages

--- a/steps.html
+++ b/steps.html
@@ -129,9 +129,7 @@ data-enhancer="objectFit"/>
             <figure class="explanation-steps-block__tabpanel-media">
             <img
                     src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-3.jpg"
-                    role="presentation"
-                    preload="auto"
-                    loop muted playsinline webkit-playsinline>
+                    role="presentation">
             </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
@@ -162,8 +160,7 @@ data-enhancer="objectFit"/>
             <figure class="explanation-steps-block__tabpanel-media">
       <img
     src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-3.jpg"
-                    role="presentation"
-                    preload="auto">
+                    role="presentation">
             </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
@@ -193,9 +190,7 @@ data-enhancer="objectFit"/>
             <figure class="explanation-steps-block__tabpanel-media">
                                                 <img
                     src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-4.jpg"
-                    role="presentation"
-                    preload="auto"
-                    loop muted playsinline webkit-playsinline>
+                    role="presentation">
             </img>
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
