fix steps css issue

--- a/steps.html
+++ b/steps.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title> 4Ocean trash tracker</title>
-  <link rel="stylesheet" href="https://theoceancleanup.com/app/themes/toc/assets/build/styles/base-67190f4efb.css" id="base-style"/>
+  <link rel="stylesheet" href="css/cleanupsteps.css" id="base-style"/>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,6 +21,8 @@
 
   <!-- Custom styles -->
   <link href="css/landing-page.min.css" rel="stylesheet">
+  
+  <link href="css/cleanupsteps.css" rel="stylesheet">
   
 </head>
 
@@ -94,12 +96,12 @@ sizes="(min-width: 940px) 80vw, 100vw"
 width="320"
 height="180"
 alt=""
-data-enhancer="objectFit"/>
+data-enhancer="objectFit" /img>
 </figure>
 
                     <div class="explanation-steps-block__title">
 
-<h2 class="block-title block-title-- block-title--large block-title--white">How it <span>works</span></h2>
+<h2 class="block-title block-title-- block-title--large block-title--blue">How it <span>works</span></h2>
 <h3> Every pound pulled is documented and tracked</h3>
 </div>
 </div>
