add images, change formatting

--- a/cleanuptech.html
+++ b/cleanuptech.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
     <title>Cleanup Tech</title>
 
    <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/landing-page.min.css" rel="stylesheet">
+
   <link data-stencil-stylesheet href="https://cdn11.bigcommerce.com/s-amir6jyttl/stencil/5fce6a70-8bc2-0138-d98e-0242ac11000e/e/84bf0180-8264-0138-5485-0242ac110012/css/theme-60a263e0-8bc2-0138-d98e-0242ac11000e.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
@@ -18,9 +18,9 @@
   </head>
   <body>
 
-     <!-- Navigation -->
+       <!-- Navigation -->
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#">4Ocean </a>
+    <a class="navbar-brand" href="index.html">4Ocean </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -63,7 +63,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+            <img class="first-slide" src="/img/headliner.jpg" alt="First slide">
             <div class="container">
               <div class="carousel-caption text-left">
                 <h1>We are on a global cleanup mission. </h1>
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+            <img class="second-slide" src="/img/boomsystem.jpg" alt="Second slide">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Our crews work year round.</h1>
@@ -82,7 +82,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+            <img class="third-slide" src="/img/skimmer.jpg" alt="Third slide">
             <div class="container">
               <div class="carousel-caption text-right">
                 <h1>We're always looking for ways to improve.</h1>
@@ -112,19 +112,16 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
             <h2>Vessels</h2>
-            <p>Having the right vessel is extremely important because each ecosystem is unique.</p>            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
             <h2>Boom systems</h2>
-            <p>We often leverage boom systems to stop plastic before it can get into the ocean.</p>            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
             <h2>Skimmers</h2>
-            <p>Developing clean ocean technologies improves our cleaning efficiency.</p>            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -136,10 +133,10 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading"> Vessels: <span class="text-muted">Definitely need boats for ocean cleaning endeavors.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Having the right vessel is extremely important because each ecosystem is unique.</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" data-src="/img/skimmer.jpg/500x500/auto" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -148,7 +145,7 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Boom systems- <span class="text-muted"> Here comes the boom.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">We often leverage boom systems to stop plastic before it can get into the ocean.</p>
           </div>
           <div class="col-md-5 order-md-1">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -160,7 +157,7 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">Skimmers- <span class="text-muted">Robotic ocean enthusiasts.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Developing clean ocean technologies improves our cleaning efficiency.</p>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -190,6 +187,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="../../../../vendor/js/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
+    <script src="../../../../vendor/js/bootstrap.min.js"></script>
   </body>
 </html>
