--- a/concernspotlight.html
+++ b/concernspotlight.html
@@ -27,7 +27,7 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#">4Ocean </a>
+    <a class="navbar-brand" href="index.html">4Ocean </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -59,3 +59,5 @@
       </ul>
     </div>
   </nav>
+  </body>
+  </html>
