--- a/meetourteams.html
+++ b/meetourteams.html
@@ -20,6 +20,8 @@
 
   <!-- Custom styles -->
   <link href="css/landing-page.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla:400|Montserrat:400,500,700&display=swap" rel="stylesheet">
+  <link data-stencil-stylesheet href="https://cdn11.bigcommerce.com/s-amir6jyttl/stencil/d04e0600-8d3e-0138-8370-0242ac11001a/e/84bf0180-8264-0138-5485-0242ac110012/css/theme-d0fb09a0-8d3e-0138-8370-0242ac11001a.css" rel="stylesheet">
 
 </head>
 
@@ -59,3 +61,139 @@
       </ul>
     </div>
   </nav>
+
+  <section class="RecentEvents ehs-progress-4col">
+    <div class="mainContainer">
+        <div class="row">
+            <div class="col--12 col--m-4">
+              <div id="event-map" style="height: 300px;"></div>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col--12 col--m-4">
+                <h2 class="CleanupOperations__title-text">Meet our teams around the world! </h2>
+            </div>
+        </div>
+
+        <div class="mobile-and-below main-carousel">
+            <div class="carousel-item">
+                <div class="carousel-image" style="background-image: url(https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/progress-bali.jpg?t=1588873351&amp;_ga=2.153669176.1247120698.1588802857-2072746903.1588604379)" title="">
+                </div>
+                <div class="row">
+                    <h4 class="CleanupOperations__eyebrow">Location</h4>
+                </div>
+                <div class="row">
+                    <div class="RecentEvents__item-title">Bali, <br> Indonesia</div>
+                </div>
+                <div class="row">
+                    <a href="/bali-indonesia"><button class="blue">Learn More</button></a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-image" style="background-image: url(https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/progress-haiti.jpg?t=1588873352&amp;_ga=2.177268261.1247120698.1588802857-2072746903.1588604379)" title="">
+                </div>
+                <div class="row">
+                    <h4 class="CleanupOperations__eyebrow">Location</h4>
+                </div>
+                <div class="row">
+                    <div class="RecentEvents__item-title">Port-au-Prince, <br> Haiti</div>
+                </div>
+                <div class="row">
+                    <a href="/port-au-prince-haiti"><button class="blue">Learn More</button></a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-image" style="background-image: url(https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/cleanupops-module-3.jpg?t=1590611600&amp;_ga=2.3339376.1575434253.1590528919-753492056.1587656830)" title="thirdTitle">
+                </div>
+                <div class="row">
+                    <h4 class="CleanupOperations__eyebrow">Location</h4>
+                </div>
+                <div class="row">
+                    <div class="RecentEvents__item-title">Puerto Barrios, <br>Guatemala</div>
+                </div>
+                <div class="row">
+                    <a href="/guatemala"><button class="blue">Learn More</button></a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-image" style="background-image: url(https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/progress-florida.jpg?t=1588873351&amp;_ga=2.186876456.1247120698.1588802857-2072746903.1588604379)" title="">
+                </div>
+                <div class="row">
+                    <h4 class="CleanupOperations__eyebrow">Location</h4>
+                </div>
+                <div class="row">
+                    <div class="RecentEvents__item-title">South Florida, <br>United States</div>
+                </div>
+                <div class="row">
+                    <a href="/south-florida"><button class="blue">Learn More</button></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row RecentEvents__items mobile-disabled">
+            <div class="col--3 col--m-4 RecentEvents__item">
+                <div class="row RecentEvents__item-image">
+                    <div style="background-image: url(https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/progress-bali.jpg?t=1588873351&amp;_ga=2.153669176.1247120698.1588802857-2072746903.1588604379)" title="">
+                    </div>
+                </div>
+                <div class="row">
+                    <h4 class="CleanupOperations__eyebrow">Location</h4>
+                </div>
+                <div class="row">
+                    <div class="RecentEvents__item-title">Bali, <br> Indonesia</div>
+                </div>
+                <div class="row">
+                    <a href="/bali-indonesia"><button class="blue">Learn More</button></a>
+                </div>
+            </div>
+            <div class="col--3 col--m-4 RecentEvents__item">
+                <div class="row RecentEvents__item-image">
+                    <div style="background-image: url(https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/progress-haiti.jpg?t=1588873352&amp;_ga=2.177268261.1247120698.1588802857-2072746903.1588604379)" title="">
+                    </div>
+                </div>
+                <div class="row">
+                    <h4 class="CleanupOperations__eyebrow">Location</h4>
+                </div>
+                <div class="row">
+                    <div class="RecentEvents__item-title">Port-au-Prince, <br> Haiti</div>
+                </div>
+                <div class="row">
+                    <a href="/port-au-prince-haiti"><button class="blue">Learn More</button></a>
+                </div>
+            </div>
+            <div class="col--3 col--m-4 RecentEvents__item">
+                <div class="row RecentEvents__item-image">
+                    <div style="background-image: url(https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/cleanupops-module-3.jpg?t=1590611600&amp;_ga=2.3339376.1575434253.1590528919-753492056.1587656830)" title="">
+                    </div>
+                </div>
+                <div class="row">
+                    <h4 class="CleanupOperations__eyebrow">Location</h4>
+                </div>
+                <div class="row">
+                    <div class="RecentEvents__item-title">Puerto Barrios, <br>Guatemala</div>
+                </div>
+                <div class="row">
+                    <a href="/guatemala"><button class="blue">Learn More</button></a>
+                </div>
+            </div>
+            <div class="col--3 col--m-4 RecentEvents__item">
+                <div class="row RecentEvents__item-image">
+                    <div style="background-image: url(https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/progress-florida.jpg?t=1588873351&amp;_ga=2.186876456.1247120698.1588802857-2072746903.1588604379)" title="">
+                    </div>
+                </div>
+                <div class="row">
+                    <h4 class="CleanupOperations__eyebrow">Location</h4>
+                </div>
+                <div class="row">
+                    <div class="RecentEvents__item-title">South Florida, <br>United States</div>
+                </div>
+                <div class="row">
+                    <a href="/south-florida"><button class="blue">Learn More</button></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+</body>
+</html>
