--- a/steps.html
+++ b/steps.html
@@ -10,6 +10,7 @@
 
   <title> 4Ocean trash tracker</title>
   <link rel="stylesheet" href="css/cleanupsteps.css" id="base-style"/>
+  
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +21,6 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Custom styles -->
-  <link href="css/landing-page.min.css" rel="stylesheet">
   
   <link href="css/cleanupsteps.css" rel="stylesheet">
   
@@ -96,7 +96,7 @@ sizes="(min-width: 940px) 80vw, 100vw"
 width="320"
 height="180"
 alt=""
-data-enhancer="objectFit" /img>
+data-enhancer="objectFit" >
 </figure>
 
                     <div class="explanation-steps-block__title">
@@ -132,7 +132,7 @@ data-enhancer="objectFit" /img>
             <img
                     src="https://cdn11.bigcommerce.com/s-amir6jyttl/product_images/uploaded_images/4ocean-tracking-pounds-3.jpg"
                     role="presentation">
-            </img>
+            
                                         </figure>
             <div class="explanation-steps-block__tabpanel-body">
                 <p>A picture is taken of the entire cleanup crew before they leave the main facility</p>
